hphp/hack/test/typecheck/reactive/test_mutable_rxshallow1.php.coeffects.exp
File "test_mutable_rxshallow1.php", line 11, characters 3-7:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "test_mutable_rxshallow1.php", line 9, characters 17-18:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
